Version mobile faite et global terminé et correction faite

--- a/style.css
+++ b/style.css
@@ -1,25 +1,16 @@
 * {
   box-sizing: border-box;
   font-family: 'Relaway', sans-serif;
+  font-size: 1em;
 }
-
-body {
-  margin: 0;
+main {
+  padding: 10px;
 }
-
-.page {
-  max-width: 1440px;
-  margin: auto;
-  padding: 0 30px;
-  padding-top: 5px;
-}
-
-
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
+  padding: 20px  0px;
 }
 
 header img.booki {
@@ -27,8 +18,7 @@ header img.booki {
 }
 
 header nav {
-  margin-left: auto;
-}
+justify-content: center;}
 
 header nav ul {
   display: flex;
@@ -71,6 +61,10 @@ nav li a {
   background: #F2F2F2;
   padding: 15px;
 }
+input[type="search"]::placeholder {
+  font-weight: bold;
+  color: black;
+}
 
 input[type="search"] {
   border: none;
@@ -82,6 +76,9 @@ input[type="search"] {
   color: white;
   border: none;
   padding: 15px;
+}
+.search-button i {
+  display: none;
 }
 
 .Filtres {
@@ -114,12 +111,23 @@ input[type="search"] {
 #star_grey {
     color: #F2F2F2;
 }
+
 .i_ {
   display: flex;
   align-items: center;
   gap: 10px;
 }
-
+.i_ i {
+  border: 1px solid #d9d9d9;
+  border-radius: 50%;
+  padding: 8px;
+  font-size: 12px;
+  height: 24px;
+  width: 24px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
 .hebergements-populaires {
   display: grid;
   grid-template-columns: 2fr 1fr;
@@ -303,14 +311,7 @@ input[type="search"] {
 }
 
 @media (max-width: 1024px) {
-  body {
-    max-width: 1024px;
-  }
-}
-
-@media (max-width: 768px) {
-
-  .hebergements-populaires {
+.hebergements-populaires {
     grid-template-columns: 1fr;
     gap: 50px;
   }
@@ -341,50 +342,67 @@ input[type="search"] {
   }
   .card3 {
     height: 200px;
-    width: 150px;
+    width: 90%;
   }
   .card3 img {
     height: 70%;
   }
 }
-@media (max-width: 324px) {
+@media (max-width: 768px) {
 
   body {
     margin: 0;
     padding: 0;
   }
-
-  main {
-    margin: 20px;
-  }
-
   header {
     flex-direction: column;
     align-items: center;
   }
 
   header nav {
+    width: 95%;
+
+  }
+   header nav {
     width: 100%;
+    display: flex;
+    justify-content: center;
   }
 
   header nav ul {
+    display: flex;
     justify-content: center;
+    width: 100%;
+  }
+
+  header nav ul li {
+    text-align: center;
+    flex: 1;
+  }
+  header nav ul li:hover{
+    border-bottom: 3px solid #0065fc;
+    padding-bottom: 7px;
+
+  }
+  header nav ul {
     padding: 0;
     margin: 0;
+    width: 100%;
   }
 
   header nav ul li a:hover {
-    color: #0065fc;
-    border-bottom: 3px solid #0065fc;
-    border-top: none;
+    border: none;
   }
+
 
   .booki {
     width: 100px;
     height: auto;
     margin-bottom: 15px;
   }
-
+  header img.booki {
+    height: 30px;
+}
   h1 {
     font-size: 16px;
   }
@@ -400,9 +418,23 @@ input[type="search"] {
 .search-button {
   white-space: nowrap;
 }
+  .search-button {
+    border-radius: 15px;
+    padding: 15px;
+  }
+
+  .search-button .btn-text {
+    display: none;
+  }
+
+  .search-button i {
+    display: block;
+    color: white;
+  }
 
   .hebergements-populaires {
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column-reverse;
     gap: 30px;
   }
 
